--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
-    <h1>Sample Site</h1>
+    <h1>Sample Site 3</h1>
     <p>
-        Hello! Welcome to my site.
+        Hello!  I changed this in vs-code.
     </p>
     <script src="index.js"></script>
 </body>
